# pepe-ai

./: .env  .env.example  .gitignore  Modelfile  README.md  SECURITY.md  api_main.py  install_mcps_windows.bat  main.py  mcp_server.py  package-lock.json  pyproject.toml  requirements.txt  test_agent.py  voice_main.py
.continue/: config.json
core/: agent.py  graph.py  llm.py  memory.py  perplexity_web.py  router.py  tools.py  tools_execute.py  tools_filesystem.py  tools_vision.py
core/agents/: __init__.py  base_agent.py  coder_agent.py  general_agent.py  model_manager.py  researcher_agent.py
dataset/: 01_identidade.jsonl  02_roteamento.jsonl  03_tool_use.jsonl  04_memoria_contexto.jsonl  05_erros_fallbacks.jsonl  06_trajetorias.jsonl  pepe_train.jsonl  pepe_val.jsonl
docs/: architecture.md  setup.md
memory/: profile.py
memory/data/: chroma.sqlite3
scratch/: test_vision.py
tests/: test_core_agent.py  test_core_graph.py  test_core_llm.py  test_core_tools.py
training/: extract_skills.py  finetune_colab.ipynb  finetune_colab_otimizado_claude.ipynb  generate_dataset.py  integrate_datasets.py  skill_manager.py
training/datasets/: pepe_dataset.json  pepe_full.jsonl  pepe_train.jsonl  pepe_val.jsonl
videos/skills/culinaria/: README.md
videos/skills/custom/: README.md
videos/skills/financas/: README.md
videos/skills/fitness/: README.md
videos/skills/programacao/: README.md
voice/: engine.py
